ags (2.1.63)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed ref count of return value and calls from/to ags_audio_collect_all_audio_ports()
	* fixed ref count of return value and calls from/to ags_audio_collect_all_audio_ports_by_specifier_and_context()
	* fixed ref count of return value and calls from/to ags_channel_collect_all_channel_ports()
	* fixed ref count of return value and calls from/to ags_channel_collect_all_channel_ports_by_specifier_and_context()
	* fixed ref count of return value and calls from/to ags_channel_get_level()
	* fixed ref count of return value from ags_recycling_find_next_channel()
	* fixed ref count of return value and calls from/to ags_audio_signal_get_template()
	* fixed ref count of return value and calls from/to ags_audio_signal_get_rt_template()
	* fixed ref count of return value and calls from/to ags_recall_get_by_effect()
	* fixed memory-leak in ags_recycling_set_samplerate(), ags_recycling_set_buffer_size() and ags_recycling_set_format()

ags (2.1.62)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed potential unitialized pointer passing to g_object_unref()

ags (2.1.61)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented ags_channel_next() and ags_channel_prev()
	* implemented ags_channel_next_pad() and ags_channel_prev_pad()
	* implemented ags_recycling_next() and ags_recycling_prev()
	* improved ags_channel_first() and alike to return referenced AgsChannel
	* improved many ref counts related to iterating AgsChannel
	* fixed memory-leak in ags_channel_recursive_setup_run_stage_down()

ags (2.1.60)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented reposition AgsAudio in AgsSoundProvider within UI
	* improved ags_simple_file_read_machine() to use g_list_append() to add AgsAudio
	* improved ags_add_audio_launch() to use g_list_append() to add AgsAudio
	* fixed missing mutex locks of AgsThreadApplicationContext